--- a/rootdir/etc/init.target.rc
+++ b/rootdir/etc/init.target.rc
@@ -242,3 +242,7 @@ service remosaic_daemon /system/vendor/bin/remosaic_daemon
 
 on property:ro.product.name=sirius
     start remosaic_daemon
+
+# FPS Info
+  chown system graphics /sys/class/graphics/fb0/measured_fps
+  chmod 0666 /sys/class/graphics/fb0/measured_fps
