--- a/rootdir/etc/init.target.rc
+++ b/rootdir/etc/init.target.rc
@@ -35,6 +35,10 @@ on boot
     chown system system /dev/lirc0
     chown system system /sys/kernel/hbtp/display_pwr
 
+# FPS Info
+    chown system graphics /sys/class/graphics/fb0/measured_fps
+    chmod 0666 /sys/class/graphics/fb0/measured_fps
+
 service adsprpcd /vendor/bin/adsprpcd rootpd
    class main
    user system
