--- a/rootdir/etc/init.target.rc
+++ b/rootdir/etc/init.target.rc
@@ -39,6 +39,10 @@ on boot
     chown system graphics /sys/class/graphics/fb0/measured_fps
     chmod 0666 /sys/class/graphics/fb0/measured_fps
 
+# Smart Charging
+    chown system system /sys/class/power_supply/battery/input_suspend
+    chmod 0666 /sys/class/power_supply/battery/input_suspend
+
 service adsprpcd /vendor/bin/adsprpcd rootpd
    class main
    user system
