--- a/rootdir/etc/init.target.rc
+++ b/rootdir/etc/init.target.rc
@@ -48,5 +48,9 @@ on boot
     chown system system /sys/class/leds/white/brightness
     chown system system /sys/class/leds/white/blink
 
+# FPS Info
+    chown system graphics /sys/class/graphics/fb0/measured_fps
+    chmod 0666 /sys/class/graphics/fb0/measured_fps
+
 on post-fs-data
     mkdir /data/vendor/hbtp 0750 system system
