--- a/rootdir/etc/init.target.rc
+++ b/rootdir/etc/init.target.rc
@@ -52,5 +52,10 @@ on boot
     chown system graphics /sys/class/graphics/fb0/measured_fps
     chmod 0666 /sys/class/graphics/fb0/measured_fps
 
+
+# Smart Charging
+    chown system system /sys/class/power_supply/battery/input_suspend
+    chmod 0666 /sys/class/power_supply/battery/input_suspend
+
 on post-fs-data
     mkdir /data/vendor/hbtp 0750 system system
